# grivredr

./: .coverage  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  GETTING_STARTED.md  IMPLEMENTATION_ROADMAP.md  LICENSE  OTP_IMPLEMENTATION_SUMMARY.md  PROJECT_READY.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.txt  README.md  README_OTP.md  REDESIGN_PLAN.md  REORGANIZATION_SUMMARY.md  REPOSITORY_OVERVIEW.md  SHARE_CHECKLIST.md  main.py  pyproject.toml  pyproject.toml.bak  quickstart.sh  requirements.txt  setup.py  test_ai_client.py  test_scrapers.py  train_cli.py  verify_setup.py
agents/: __init__.py  base_agent.py  browser_use_discovery_agent.py  code_generator_agent.py  continuous_improvement_agent.py  form_discovery_agent.py  form_scraper_generator.py  human_recorder_agent.py  hybrid_discovery_strategy.py  hybrid_form_discovery.py  js_analyzer_agent.py  orchestrator.py  scraper_validator.py  smart_form_discovery.py  test_agent.py
batch/: batch_processor.py
cli/: __init__.py  factory_cli.py  fill_cli.py  main.py  record_cli.py  train_cli.py  train_from_recording.py  tui.py
config/: __init__.py  ai_client.py  healing_prompts.py  multi_provider_client.py  municipalities.json  settings.py
docs/: AGENTIC_EXAMPLE.md  COMPLETE_FEATURE_GUIDE.md  HUMAN_RECORDING_INTEGRATION.md  IMPROVEMENTS.md  PROJECT_ACHIEVEMENTS.md  QUICK_START.md  REORGANIZATION_COMPLETE.md  STATUS.md  TRAINING_IMPROVEMENTS.md  TRAINING_SUCCESS_SUMMARY.md  USAGE_GUIDE.md
executor/: runner.py
intelligence/: agent_trainer.py  (+8 more)
(+60 files in other folders)
